--- a/style.css
+++ b/style.css
@@ -3,18 +3,21 @@
 }
 
 body {
+    height: 100vh;
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #d894ff;
+    background-image: url("/img/feelty-bg.png");
 }
 
 header {
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    display: none;
 }
 
 header h1 {
