--- a/style.css
+++ b/style.css
@@ -1,25 +1,241 @@
 *, *::before, *::after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
 }
 
 body {
-    height: 100vh;
-    margin: 0;
-    padding: 0;
+    height: auto;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #d894ff;
-    background-image: url("/img/feelty-bg.png");
+    color: #fff;
 }
 
-header {
-    /* background-color: #fff; */
+/* header {
+    /* background-color: #fff;
     padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     display: none;
+
+    & h1 {
+    font-size: 2rem;
+    }
+} */
+
+#home {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    background-image: url("/img/feelty-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left;
+    background-attachment: fixed;
+
+    & h1 {
+        font-size: 6rem;
+    }
+
+    & h3 {
+        font-size: 3rem;
+    }
+
+    & p {
+        font-size: 1.5rem;
+        color: #9b9b9b;
+    }
+
+    & button {
+        font-size: 1.5rem;
+        padding: 1rem 2rem;
+        background-color: #fff;
+        color: #000;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+        margin-top: 1rem;
+
+        &:hover {
+            opacity: 0.5;
+            box-shadow: 0 0 10px #000;
+        }
+    }
+
+    .container-home {
+        position: relative;
+        display: flex;
+        justify-content: end;
+        align-items: start;
+        flex-direction: column;
+        width: 80%;
+        /* max-width: 500px; */
+        margin: 0 auto;
+
+        & img {
+            position: absolute;
+            height: auto;
+            width: 150px;
+            top: -250px;
+            left: 0;
+        }
+ }
 }
 
-header h1 {
-    font-size: 2rem;
+#books {
+    position: relative;
+    height: 100vh;
+    /* margin: 2rem 0;
+    padding: 1rem; */
+
+    & .feelty {
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        left: 5px;
+        height: auto;
+        width: 20%;
+                
+    }
+
+    & .container-books {
+        position: relative;
+        width: 70%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        flex-wrap: wrap;
+        margin: 2rem auto;
+        padding: .5rem;
+        border-radius: 3px;
+        /* max-width: 500px; */
+        background-color: rgb(29, 29, 29);
+
+        & h2 {
+            width: 100%;
+            padding: 1rem 1rem 0 1rem;
+        }
+
+        & .item-book {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            /* height: 500px; */
+            /* height: 600px; */
+            min-height: 550px;
+            max-width: 350px;
+            width: 100%;
+            /* max-width: 500px; */
+            margin: 0 auto;
+            margin-top: 2rem;
+            padding: 1rem;
+            border-radius: 5px;
+            box-shadow: 0 0 10px #000;
+            color: #000;
+            background-color: #fff;
+            transition: all 0.3s ease-in-out;
+
+            & h2 {
+                font-size: 2rem;
+                margin-bottom: 1rem;
+                color: #000;
+                text-shadow: 0 0 10px #fff;
+            }
+
+            & p {
+                font-size: 1.2rem;
+                color: #000;
+                text-shadow: 0 0 10px #fff;
+                text-align: start;
+                text-wrap: pretty;
+            }
+
+            & button {
+                font-size: 1.2rem;
+                padding: 0.5rem 1rem;
+                background-color: #8926b5;
+                color: #000;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: all 0.3s ease-in-out;
+                margin-top: 1rem;
+
+                &:hover {
+                    opacity: 0.5;
+                    box-shadow: 0 0 10px #000;
+                }
+            }
+
+            &:hover .caratula {
+                transform: scale(1.03);
+            }
+            &:hover {
+                transform: scale(1.1);
+                box-shadow: 0 0 10px #000;
+                cursor: pointer;
+            }
+
+            & .caratula {
+                position: relative;
+                display: flex;
+                justify-content: center;
+                height: auto;
+                width: 200px;
+                margin-bottom: 1rem;
+                transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+                & img {
+                    height: auto;
+                    width: 80%;
+                    margin: 0 auto;
+
+                    border-radius: 5px;
+                    filter: brightness(0.5);
+                }
+
+            }
+        }
+
+        & .add-book {
+            background-color: #8926b5;
+            opacity: 0.5;
+
+            & svg {
+                z-index: 0;
+                position: absolute;
+                height: auto;
+                width: 250px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: #fff;
+                opacity: 0.1;
+            }
+
+            & h2 {
+                font-size: 2rem;
+                margin-bottom: 1rem;
+                color: #fff;
+                text-shadow: 0 0 10px #000;
+            }
+
+            & p {
+                font-size: 1.2rem;
+                color: #fff;
+                text-shadow: 0 0 10px #000;
+                text-align: center;
+                text-wrap: pretty;
+            }
+        }
+    }
 }
