--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ body {
 
 #books {
     position: relative;
-    height: 100vh;
-    /* margin: 2rem 0;
-    padding: 1rem; */
+    /* height: 100vh; */
+    margin: 7rem 0;
+    /* padding: 7rem 0;  */
 
     & .feelty {
         z-index: 1;
@@ -113,13 +113,15 @@ body {
         gap: 1rem;
         flex-wrap: wrap;
         margin: 2rem auto;
-        padding: .5rem;
+        padding: 3rem .5rem;
+        margin: 2rem auto;
         border-radius: 3px;
         /* max-width: 500px; */
         background-color: rgb(29, 29, 29);
 
-        & h2 {
+        & h2:nth-child(1) {
             width: 100%;
+            text-align: center;
             padding: 1rem 1rem 0 1rem;
         }
 
@@ -209,6 +211,7 @@ body {
         & .add-book {
             background-color: #8926b5;
             opacity: 0.5;
+            transition: all 0.5s ease;
 
             & svg {
                 z-index: 0;
@@ -220,6 +223,7 @@ body {
                 transform: translate(-50%, -50%);
                 color: #fff;
                 opacity: 0.1;
+                transition: all 0.5s ease;
             }
 
             & h2 {
@@ -236,6 +240,28 @@ body {
                 text-align: center;
                 text-wrap: pretty;
             }
+
+            &:hover svg {
+                opacity: 1;
+            }
+
+            &:hover h2 {
+                opacity: 0;
+            }
+
+            &:hover p {
+                opacity: 0;
+            }
         }
     }
+}
+
+footer {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+    background-color: #141414;
 }
