--- a/style.css
+++ b/style.css
@@ -25,7 +25,46 @@ body {
     font-size: 2rem;
     }
 } */
+.rainbow {
+    /* background: linear-gradient(90deg, 
+    rgba(255, 0, 0, 0.6), 
+    rgba(255, 127, 0, 0.6), 
+    rgba(255, 255, 0, 0.6), 
+    rgba(0, 255, 0, 0.6), 
+    rgba(0, 0, 255, 0.6), 
+    rgba(75, 0, 130, 0.6), 
+    rgba(148, 0, 211, 0.6)
+); */
+/* background: linear-gradient(to right, 
+rgba(255, 182, 193, 0.8), 
+rgba(255, 255, 255, 0.8), 
+rgba(127, 255, 212, 0.8),
+rgba(255, 99, 71, 0.8)); */
+background: linear-gradient(to right, 
+rgba(255, 182, 193, 0.8), /* Rosa claro */
+rgba(255, 255, 255, 0.8), /* Blanco */
+rgba(127, 255, 212, 0.8), /* Verde claro */
+rgba(255, 99, 71, 0.8),   /* Tomate */
+rgba(113, 19, 156, 0.8),  /* Color especificado */
+rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
+);
+    background-size: 300% 100%; /* Aumentar el tamaño del fondo */
+    animation: rainbow-animation 6s ease-in-out infinite; /* Suavizar la animación */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
+@keyframes rainbow-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
 #home {
     height: 100vh;
     display: flex;
@@ -50,6 +89,22 @@ body {
         font-size: 1.5rem;
         color: #9b9b9b;
     }
+/* 
+    & .rainbow {
+        font-weight: bold;
+        background: linear-gradient(to right, rgba(255, 182, 193, 0.8), rgba(255, 255, 255, 0.8), rgba(127, 255, 212, 0.8), rgba(255, 99, 71, 0.8)); /* Colores en tonalidades suaves
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4); /* Sombra de texto más fuerte 
+        transform: scale(1.1); /* Aumento ligero del tamaño */
+        transition: transform 0.3s ease; /* Transición suave al pasar el mouse 
+
+        &:hover {
+            transform: scale(1.15); /* Aumento al pasar el mouse 
+        }
+    } */
+
+
 
     & button {
         font-size: 1.5rem;
