--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
     }
 
     & p {
+        padding-top: .5rem;
         font-size: 1.5rem;
         color: #9b9b9b;
     }
@@ -172,7 +173,7 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
         margin: 2rem auto;
         border-radius: 3px;
         /* max-width: 500px; */
-        background-color: rgb(29, 29, 29);
+        background-color: #1d1d1d;
 
         & h2:nth-child(1) {
             width: 100%;
