--- a/style.css
+++ b/style.css
@@ -9,8 +9,29 @@ body {
     height: auto;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #d894ff;
+    /* background-color: #d894ff; */
     color: #fff;
+    background: rgb(216,148,255);
+    background: linear-gradient(90deg, rgba(216,148,255,1) 66%, rgba(255,255,255,1) 96%);
+}
+/* Barra de desplazamiento personalizada para navegadores WebKit (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 7px; /* Ancho de la barra de desplazamiento */
+  border-radius: 8px; /* Bordes redondeados */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Sin fondo en la pista */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #8926b5; /* Color del pulgar de la barra de desplazamiento */
+  border-radius: 8px; /* Bordes redondeados */
+  border: 3px solid transparent; /* Espacio para que se vea el pulgar más grande */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #222222; /* Color del pulgar al pasar el mouse */
 }
 
 /* header {
@@ -142,6 +163,51 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
  }
 }
 
+.social-media {
+    width: 50px; /* Ancho del apartado para ajustar al tamaño del ícono */
+    position: sticky; /* Cambiar a sticky */
+    top: 20px; /* Distancia desde la parte superior de la pantalla */
+    right: 20px; /* Pegado a la derecha */
+    margin: 1rem;
+    background: #8926b5; /* Color sólido */
+    padding: 10px; /* Espaciado interno */
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra más prominente */
+    color: white;
+    text-align: center;
+    z-index: 1000; /* Asegura que esté encima de otros elementos */
+    opacity: 0.5;
+    transition: all 0.3s;
+
+    &:hover {
+      opacity: 0.8;
+    }
+
+}
+
+.social-media li {
+  list-style: none;
+  margin: 10px 0; /* Espacio entre los elementos de la lista */
+  transition: all 0.1s;
+
+  :hover {
+    opacity: 1;
+  }
+}
+
+.social-media a {
+  color: white; /* Color del ícono */
+  text-decoration: none; /* Sin subrayado */
+  font-size: 24px; /* Tamaño del ícono */
+  transition: transform 0.3s; /* Efecto de transición al pasar el mouse */
+}
+
+.social-media li:hover {
+  transform: scale(1.2); /* Aumenta el tamaño al pasar el mouse */
+  opacity: 1;
+}
+
+
 #books {
     position: relative;
     margin: 7rem 0;
@@ -168,11 +234,14 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
             margin: 2rem auto;
             border-radius: 3px;
             /* max-width: 500px; */
-            background-color: #1d1d1d;
+            background-color: #222222;
 
         & h2:nth-child(1) {
             width: 100%;
             text-align: center;
+              color: #8926b5;
+              margin-bottom: 20px;
+              font-size: 2.2em;
             padding: 1rem 1rem 0 1rem;
         }
 
@@ -192,10 +261,11 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
             margin-top: 2rem;
             padding: 1rem;
             border-radius: 5px;
-            box-shadow: 0 0 10px #000;
+            box-shadow: 0 0 20px #8a8a8a3f;
             color: #000;
             background-color: #fff;
             transition: all 0.3s ease-in-out;
+            transform: scale(0.8);
 
             & h2 {
                 font-size: 2rem;
@@ -230,11 +300,17 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
             }
 
             &:hover .caratula {
-                transform: scale(1.03);
+              z-index: 1;
+                transform: scale(1.05) translateY(40px);
             }
+
+            &:hover h2 {
+              opacity: 0.3;
+          }
+            
             &:hover {
-                transform: scale(1.1);
-                box-shadow: 0 0 10px #000;
+                transform: scale(0.9);
+                box-shadow: 0 0 20px rgb(216, 148, 255 , 0.42);
                 cursor: pointer;
             }
 
@@ -307,6 +383,94 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
     }
 }
 
+#reading-tracker {
+  max-width: 800px;
+  margin: auto;
+  padding: 30px;
+  background: white;
+  color: #000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  margin: 1rem auto;
+}
+
+h1 {
+  color: #8926b5;
+  margin-bottom: 20px;
+  font-size: 2.2em;
+}
+
+p {
+  margin-bottom: 30px;
+  font-size: 1.1em;
+}
+
+.libro-lista {
+  list-style: none;
+  padding: 0;
+}
+
+.libro {
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+  padding: 20px;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  background-color: #f4f4f4;
+  transition: box-shadow 0.3s ease;
+}
+
+.libro:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
+.libro i {
+  font-size: 50px;
+  color: #d894ff;
+  margin-right: 20px;
+}
+
+.libro-info {
+  flex-grow: 1;
+}
+
+h2 {
+  color: #8926b5;
+  margin-bottom: 10px;
+  font-size: 1.5em;
+}
+
+p {
+  margin: 5px 0;
+}
+
+.grafica {
+  width: 100%;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-top: 10px;
+}
+
+.porcentaje {
+  height: 12px;
+  background-color: #d894ff;
+  border-radius: 5px;
+}
+
+.completo {
+  color: #28a745;
+}
+
+.en-progreso {
+  color: #ffc107;
+}
+
+.pendiente {
+  color: #dc3545;
+}
+
 #starbooks {
     position: relative;
     height: auto;
@@ -323,6 +487,12 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
         font-weight: bold;
         text-align: center;
         margin: 2rem;
+    }
+
+    & p {
+      padding: 1rem;
+      font-weight: 500;
+      text-align: center;
     }
 
     & .item-starbook {
@@ -570,6 +740,76 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
     } 
 }
 
+#buy-books {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+  background: white;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+h1 {
+  color: #8926b5; /* Color primario 1 */
+}
+
+h2 {
+  color: #d894ff; /* Color primario 2 */
+}
+
+p {
+  margin-bottom: 20px;
+}
+
+.libro-lista {
+  list-style-type: none; /* Elimina las viñetas */
+  padding: 0; /* Elimina el padding */
+}
+
+.libro-lista li {
+  margin-bottom: 15px; /* Espacio entre cada elemento de la lista */
+  padding: 10px;
+  border: 1px solid #ccc; /* Borde alrededor de cada empresa */
+  border-radius: 5px; /* Bordes redondeados */
+  transition: transform 0.2s; /* Animación al pasar el ratón */
+}
+
+.libro-lista li:hover {
+  transform: scale(1.02); /* Efecto de escalado al pasar el ratón */
+}
+
+.libro-lista a {
+  text-decoration: none; /* Elimina el subrayado de los enlaces */
+  color: #8926b5; /* Color primario 1 */
+  font-weight: bold; /* Texto en negrita para enlaces */
+}
+
+.libro-lista a:hover {
+  text-decoration: underline; /* Subraya al pasar el ratón sobre el enlace */
+}
+
+.comprar-btn {
+  margin-top: 10px; /* Espacio encima del botón */
+  background-color: #d894ff; /* Color primario 2 para el botón */
+  color: white; /* Texto blanco */
+  border: none; /* Sin borde */
+  border-radius: 5px; /* Bordes redondeados */
+  padding: 10px 15px; /* Relleno dentro del botón */
+  cursor: pointer; /* Cambia el cursor al pasar por encima */
+  font-size: 14px; /* Tamaño de fuente del botón */
+  transition: background-color 0.3s; /* Transición de color de fondo */
+}
+
+.comprar-btn:hover {
+  background-color: #8926b5; /* Color primario 1 al pasar el ratón */
+}
+
+.comprar-btn a {
+  color: white; /* Texto blanco en el enlace dentro del botón */
+  text-decoration: none; /* Sin subrayado */
+}
+
+
 footer {
     position: relative;
     display: flex;
@@ -578,4 +818,16 @@ footer {
     height: 100px;
     width: 100%;
     background-color: #141414;
+
+    & button {
+      background-color: transparent;
+      color: #fff;
+      border: none;
+      text-decoration: underline 1px solid #8926b5;
+      cursor: pointer;
+
+      &:hover {
+        text-decoration: none;
+    }
+  }
 }
