--- a/style.css
+++ b/style.css
@@ -7,12 +7,18 @@
 
 body {
     height: auto;
-    width: 100%;
+
     font-family: Arial, Helvetica, sans-serif;
     /* background-color: #d894ff; */
     color: #fff;
-    background: rgb(216,148,255);
-    background: linear-gradient(90deg, rgba(216,148,255,1) 66%, rgba(255,255,255,1) 96%);
+    /* background: rgb(216,148,255); */
+    background: linear-gradient(90deg, rgba(216,148,255,1) 66%, rgba(255,255,255,1) 96%),
+    url("/img/Background/patron-bg-v03.png");
+    background-size: contain;
+    background-repeat: repeat;
+    background-position: center;
+    background-blend-mode: overlay;
+
 }
 /* Barra de desplazamiento personalizada para navegadores WebKit (Chrome, Safari) */
 ::-webkit-scrollbar {
@@ -86,6 +92,82 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
         background-position: 0% 50%;
     }
 }
+
+/* Estilo del ícono de usuario */
+#loginBtn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 24px;
+  cursor: pointer;
+  color: #fff;
+  margin: 20px;
+}
+
+/* Cambia de color al pasar el ratón */
+#loginBtn :hover {
+  color: #d894ff;
+}
+
+/* Estilos para el modal */
+.modal {
+  z-index: 1;
+  display: none; /* Oculto por defecto */
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.close {
+  float: right;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+label, input {
+  display: block;
+  margin: 10px 0;
+  width: 100%;
+}
+
+input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.submit-btn {
+  padding: 10px;
+  background-color: #6200ea;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.submit-btn:hover {
+  background-color: #3700b3;
+}
+
 #home {
     height: 100vh;
     display: flex;
@@ -221,6 +303,16 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
     position: relative;
     margin: 7rem 0;
 
+
+    /* & img:first-child {
+      z-index: 1;
+
+      top: 0;
+      left: 0;
+      position: absolute;
+      object-fit: contain;
+    } */
+    
         & .feelty {
             z-index: 1;
             position: absolute;
@@ -549,13 +641,13 @@ p {
         top: 0%;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to bottom, #eba65b 30%, #d99267 100%);
+        background: linear-gradient(to bottom, #557432 30%, #baff3ac4 100%);
         z-index: 300;
         box-shadow: 0px 20px 100px #555;
       }
       
       #c1 {
-        background: linear-gradient(to bottom, #59476f 30%, #7b88d1 100%);
+        background: linear-gradient(to bottom, #000000 30%, #181818 100%);
         box-shadow: 0px 20px 100px #555;
         left: 100%;
         z-index: 0;
@@ -564,7 +656,7 @@ p {
       #c2 {
         left: -100%;
         z-index: 0;
-        background: linear-gradient(to bottom, #59476f 30%, #7b88d1 100%);
+        background: linear-gradient(to bottom, #59476f 30%, #ff6464 100%);
         box-shadow: 0px 20px 100px #555;
       }
       
@@ -583,6 +675,10 @@ p {
         height: 80%;
         background: linear-gradient(to top, #eba65b 30%, #d99267 100%);
       }
+/* 
+      #io {
+        background-color: red;
+      }
       
       #i1 {
         background: linear-gradient(to bottom, #59476f 30%, #7b88d1 100%);
@@ -590,7 +686,7 @@ p {
       
       #i2 {
         background: linear-gradient(to bottom, #59476f 30%, #7b88d1 100%);
-      }
+      } */
       
       span {
         position: absolute;
