--- a/style.css
+++ b/style.css
@@ -455,10 +455,11 @@ input {
           }
       }
 
-        & .add-book {
+        & #add-book {
             background-color: #8926b5;
             opacity: 0.5;
             transition: all 0.5s ease;
+            color: red;
 
             & svg {
                 z-index: 0;
@@ -592,6 +593,7 @@ p {
 }
 
 #stories {
+    z-index: 1;
     position: relative;
     height: 100vh;
     width: 100%;
@@ -604,8 +606,18 @@ p {
     margin: 0 auto;
     padding: 1rem;
 
+    & .filter {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: -1;
+    }
+
     & h2 {
-      font-size: 3rem;
+      font-size: 4rem;
       color: var(--white);
     }
     
@@ -619,6 +631,7 @@ p {
       font-size: 2rem;
       font-weight: bold;
       text-transform: uppercase;
+      text-align: center;
       margin-top: 2rem;
     }
 
@@ -744,13 +757,30 @@ header {
     align-items: center;
     padding: .4rem 1rem 1rem 1rem;
 
+    & #btn-menu {
+      z-index: 20;
+      position: absolute;
+      top: 25px;
+      right: 30px;
+      border: 1px solid #ffffff27;
+      padding: .5rem;
+      display: none;
+
+      &:hover {
+        background-color: var(--primary-color);
+      }
+
+      @media screen and (max-width: 768px) {
+        display: block;  
+      }
+    }
+
     & img {
       height: 50px;
-      width: auto;
     }
 
 
-  & ul {
+  & #menu {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -758,6 +788,11 @@ header {
     list-style: none;
     padding: 1rem;
     overflow: hidden;
+
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+
 
     & a {
       text-decoration: none;
@@ -795,7 +830,6 @@ header {
         transform: rotate(65.5deg);
         opacity: 0.3;
         margin: -1rem;
-
       }
 
       &:hover {
@@ -818,9 +852,40 @@ header {
     }
 
     & nav {
+      flex-direction: column;
+      justify-content: start;
+      align-items: start;
 
       & ul {
-        display: none;
+        height: 100vh;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+
+        & li {
+          text-align: start;
+
+          & img {
+            display: none;
+          }
+
+          &::after {
+            content: "";
+            position: absolute;
+            top: 30px;
+            right: -60px;
+            height: 100%;
+            width: 190px;
+            background-image: url();
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            transform: rotate(65.5deg);
+            opacity: 0.3;
+            margin: -1rem;
+          }
+        }
+
       }
 
       & img {
@@ -829,6 +894,16 @@ header {
   }
 
   }
+}
+
+.display-block {
+  display: block;
+}
+.display-none {
+  display: none;
+}
+#menu.display-block {
+  display: block;
 }
 
 #starbooks {
@@ -891,6 +966,7 @@ header {
     & .item-starbook {
         height: 100%;
         width: 100%;
+        margin-right: 7rem;
     } 
     .container-star-book {
         position: relative;
@@ -1299,5 +1375,22 @@ footer {
 
   .footer-subscription form {
     justify-content: center;
+  }
+  #stories {
+
+    & h2 {
+      font-size: 1.7rem;
+      color: var(--white);
+    }
+
+    &::before {
+      font-size: .2rem;
+      padding: .1rem;
+    }
+
+    &::after {
+      font-size: 1.5rem;
+      padding: .2rem;
+    }
   }
 }
