--- a/style.css
+++ b/style.css
@@ -356,8 +356,9 @@ input {
                 text-align: center;
                 color: #8926b5;
                 margin-bottom: 20px;
-                font-size: 3rem;
-                padding: 1rem 1rem 0 1rem;
+                font-size: 4rem;
+                font-weight: bold;
+                padding: 5rem 1rem 0 1rem;
             }
 
             & .item-book {
@@ -374,13 +375,13 @@ input {
                 /* max-width: 500px; */
                 margin: 0 auto;
                 margin-top: 2rem;
-                padding: 1rem;
+                padding: .5rem;
                 border-radius: 5px;
                 box-shadow: 0 0 20px #8a8a8a3f;
                 color: #000;
                 background-color: #fff;
                 transition: all 0.3s ease-in-out;
-                transform: scale(0.8);
+                /* transform: scale(0.8); */
 
                 & h2 {
                     font-size: 2rem;
@@ -395,6 +396,7 @@ input {
                     text-shadow: 0 0 10px #fff;
                     text-align: justify;
                     text-wrap: pretty;
+                    display: none;
                 }
 
                 & button {
@@ -899,6 +901,13 @@ header {
 .display-block {
   display: block;
 }
+
+body.o {
+  overflow-y: auto;
+}
+.o {
+  overflow-y: auto;
+}
 .display-none {
   display: none;
 }
@@ -921,10 +930,10 @@ header {
 
     & h2 {
       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        font-size: 4rem;
+        font-size: 5rem;
         font-weight: bold;
         text-align: center;
-        padding: 2rem 0 0.5rem 0;
+        padding: 3rem 0 0.5rem 0;
         color: #8926b5;
     }
 
@@ -942,7 +951,7 @@ header {
 
     & p {
       position: relative;
-      font-size: 1rem;
+      font-size: 1.3rem;
       color: #fff;
       font-weight: 100;
       border-radius: 2px;
@@ -956,7 +965,7 @@ header {
   }
 
     & p {
-      font-size: 1.4rem;
+      font-size: 2rem;
       font-weight: 500;
       text-align: center;
       text-shadow: 0 0 5px #000000a2;
@@ -1024,7 +1033,7 @@ header {
         z-index: 10;
         transform: rotate(0deg) scale(0.7) translateY(10px);
         transition: .5s all ease;
-        box-shadow: 40px 0 40px rgba(255, 255, 255, 0.137);
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
         cursor: pointer;
       }
       
@@ -1170,6 +1179,55 @@ p {
 .comprar-btn a {
   color: white; /* Texto blanco en el enlace dentro del botón */
   text-decoration: none; /* Sin subrayado */
+}
+
+#our-team {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--last-color);
+  background-image: url(/img/pexels-i-rem-karakas-53441851-8647727.jpg);
+  background-size: cover;
+  box-shadow: 0 0 20px #0000003f;
+  margin: auto;
+  margin-bottom: 3rem;
+  padding: 2rem;
+  text-shadow: 0 0 7px #000000;
+
+  & div {
+    padding: 1rem;
+
+    & svg {
+      border: 1px solid #00000027;
+      border-radius: 50%;
+      padding: 1rem;
+      margin: 1rem;
+      transition: all 0.3s;
+      backdrop-filter: blur(20px);
+      
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  & h2 {
+    font-size: 4rem;
+    color: var(--white);
+    text-align: center;
+  }
+
+  p {
+    font-size: 1.5rem;
+    font-weight: 800;
+    font-style: italic;
+    max-width: 800px;
+
+  }
 }
 
 
